--- a/framework/dependencies.yml
+++ b/framework/dependencies.yml
@@ -24,6 +24,7 @@ require:    &allDependencies
     - commons-logging 1.1.1
     - dom4j 1.6.1
     - com.h2database -> h2 1.3.166
+    - io.netty -> netty 3.8.0.Final
     - javax.activation -> activation 1.1.1
     - javax.mail -> mail 1.4.3
     - javax.inject 1.0
@@ -50,7 +51,6 @@ require:    &allDependencies
     - org.hibernate -> jboss-transaction-api_1.1_spec 1.0.0.Final
     - org.hibernate.javax.persistence -> hibernate-jpa-2.0-api 1.0.1.Final
     - org.javassist -> javassist 3.18.0.GA
-    - org.jboss.netty -> netty 3.4.2.Final
     - org.postgresql -> postgresql 9.0
     - org.slf4j -> slf4j-api 1.6.1
     - org.slf4j -> slf4j-log4j12 1.6.1
